examples/good/6.emm
void f () {}

int x (int i) {
  return i + 1;
}

int main() {
 f();
 print(x(2));
 return 0;
}

// 3
