examples/bad/6-arg_num.emm
void f(int i) {}

int main() {
 f(3, 4);
 return 0;
}
